fix business phone validation and clipped text issue in country selection

--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -4,6 +4,7 @@
 	$reactselectheight : 40px;
 	$reactselectcontentheight: 20px;
 	@mixin reactselectstyles {
+		line-height: normal;
 
 		&.height-auto .react-select__control{
 			height: auto;
